Services/librewolf/endpoint.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: librewolf-service
  namespace: external-services
subsets:
  - addresses:
      - ip: 192.168.1.64
    ports:
      - port: 3000
