Services/librewolf/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: librewolf-service
  namespace: external-services
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
