Services/librewolf/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: librewolf-ingress
  namespace: external-services
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - browser.dassidias.com
    secretName: librewolf-tls
  rules:
  - host: browser.dassidias.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: librewolf-service
            port:
              number: 80
